--- a/SCSS/layout/_index.scss
+++ b/SCSS/layout/_index.scss
@@ -1,8 +1,86 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Ysabeau:wght@300&display=swap');
 
+// NAV INDEX
+
+.nav-inicio {
+    display: flex;
+    flex-direction: column;
+    padding-top: 100px;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    margin: auto;
+    position: relative;
+    z-index: 2;
+
+
+    .bandaloslogo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Pacifico', cursive;
+        color: gold;
+        align-items: center;
+        padding: 15px;
+        margin-bottom: 65px;
+        font-size: 90px;
+        text-decoration: none;
+
+        &:hover {
+            color: rgb(0, 0, 0);
+            transition: 0.5s;
+            box-shadow: 10px 10px 5px 0;
+            background-color: gold;
+        }
+    }
+
+    ul {
+        display: flex;
+        flex-direction: row;
+        gap: 100px;
+        li {
+            font-family: 'Pacifico', cursive;
+            list-style: none;
+            width: max-content;
+            padding: 4px;
+            cursor: pointer;
+            border-radius: 5px;
+            border-style: dotted gold;
+            color: rgb(4, 4, 4);
+
+            &:hover {
+                background-color: rgb(170, 170, 170);
+                border-radius: 3px;
+                padding: 6px;
+                border-radius: 20px;
+                transition: 0.8s;
+                box-shadow: 15px 15px 10px 0;
+            }
+
+            a {
+                text-decoration: none;
+                font-size: 25px;
+                color: rgb(170, 170, 170);
+                font-weight: 800;
+
+                &:hover {
+                    color: rgb(0, 0, 0);
+                }
+            }
+
+        }
+
+    }
+}
+
+// FINISH NAV INDEX
+
+// VIDEO iINDEX START
+
 .container1 {
     position: relative;
     height: 100vh;
+
     .video-container {
         position: absolute;
         top: 0;
@@ -11,6 +89,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+
         video {
             position: relative;
             top: 50%;
@@ -22,94 +101,10 @@
         }
     }
 }
+
+// FINISH VIDEO INDEX
+
 /* MAIN BEGINNING */
-
-    // video {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     object-fit: cover;
-    // }
-
-    // .capa {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-color: rgba(0, 0, 0, 0.527);
-    //     opacity: 0.5;
-    //     mix-blend-mode: overlay;
-    // }
-
-    .nav-inicio {
-        padding-top: 100px;
-        justify-content: center;
-        align-items: center;
-        width: 60%;
-        margin: auto;
-        position: relative;
-        z-index: 2;
-
-
-        .bandaloslogo {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-family: 'Pacifico', cursive;
-            color: gold;
-            align-items: center;
-            padding: 15px;
-            margin-bottom: 65px;
-            font-size: 90px;
-            text-decoration: none;
-            &:hover {
-                color: rgb(0, 0, 0);
-                transition: 0.5s;
-                box-shadow: 10px 10px 5px 0;
-                background-color: gold;
-            }
-        }
-
-        ul {
-            display: flex;
-            flex-direction: column;
-            gap: 100px;
-            padding: 0;
-            li {
-                font-family: 'Pacifico', cursive;
-                list-style: none;
-                width:max-content;
-                padding: 4px;
-                cursor: pointer;
-                border-radius: 5px;
-                border-style: dotted gold;
-                color: rgb(4, 4, 4);
-                &:hover {
-                    background-color: rgb(170, 170, 170);
-                    border-radius: 3px;
-                    padding: 6px;
-                    border-radius: 20px;
-                    transition: 0.8s;
-                    box-shadow: 15px 15px 10px 0;
-                }
-            a {
-                text-decoration: none;
-                font-size: 25px;
-                color: rgb(170, 170, 170);
-                font-weight: 800;
-                &:hover {
-                    color: rgb(0, 0, 0);
-                }
-            }
-
-        }
-
-    }
-}
-
 
 .main-in {
     background-color: antiquewhite;
@@ -129,7 +124,7 @@
     }
 }
 
-    // FINISH ABOUT US
+// FINISH ABOUT US
 
 .img1-ind {
     display: flex;
@@ -154,6 +149,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+
     img {
         border-radius: 15px;
     }
@@ -180,6 +176,7 @@
     width: 100%;
     object-fit: cover;
     border-radius: 15px;
+
     img {
         border-radius: 15px;
     }
@@ -191,6 +188,7 @@
         color: rgb(52, 42, 19);
         font-weight: 400;
     }
+
     p {
         margin: 15px;
     }
@@ -204,6 +202,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+
     img {
         border-radius: 15px;
     }
@@ -229,6 +228,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+
     img {
         border-radius: 15px;
     }
@@ -254,6 +254,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+
     img {
         border-radius: 15px;
     }
@@ -282,6 +283,7 @@
     font-family: 'Ysabeau', sans-serif;
 
 }
+
 /* MAIN DISCOGRAFIA BEGINNING */
 
 .main-disc {
@@ -290,12 +292,14 @@
     display: grid;
     gap: 15px;
     font-family: 'Ysabeau', sans-serif;
+
     h1 {
-    text-align: center;
-    padding-bottom: 20px;
-    font-family: 'Pacifico', cursive;
-    color: rgb(0, 0, 0);
+        text-align: center;
+        padding-bottom: 20px;
+        font-family: 'Pacifico', cursive;
+        color: rgb(0, 0, 0);
     }
+
     h2 {
         font-weight: 900;
         text-align: center;
@@ -318,6 +322,7 @@
     border-radius: 15px;
     background-color: rgb(84, 80, 80);
     color: white;
+
     .spot1-div {
         h1 {
             padding: 20px;
@@ -335,6 +340,7 @@
     border-radius: 15px;
     background-color: rgb(44, 98, 133);
     color: white;
+
     .spot2-div {
         h1 {
             padding: 20px;
@@ -351,6 +357,7 @@
     border-radius: 15px;
     background-color: rgb(215, 66, 66);
     color: white;
+
     .spot3-div {
         h1 {
             padding: 20px;
@@ -368,14 +375,15 @@
     border-radius: 15px;
     background-color: rgb(0, 0, 0);
     color: white;
+
     .spot4-div {
         h1 {
             padding: 20px;
-        }        
+        }
     }
 }
 
- 
+
 /* MAIN DISCOGRAFIA END */
 
 // MAIN JOURNEY BEGINNING 
@@ -385,6 +393,7 @@
     padding: 20px;
     background-color: antiquewhite;
     font-family: 'Ysabeau', sans-serif;
+
     h1 {
         font-family: 'Pacifico', cursive;
         margin-bottom: 50px;
@@ -397,17 +406,20 @@
         width: 200px;
         border-radius: 15px;
         box-shadow: 10px 10px 10px 0;
+
         &:hover {
             transform: scale(1.05);
             transition: 0.8s;
         }
     }
+
     .disc-1floor {
         img {
             height: 80%;
             width: 80%;
             margin-bottom: 30px;
         }
+
         p {
             font-weight: 900;
             font-size: 20px;
@@ -415,15 +427,18 @@
             color: rgb(52, 42, 19);
         }
     }
+
     .disc-2floor {
         margin-top: 50px;
         height: 100%;
         width: 100%;
         margin-bottom: 50px;
+
         img {
             height: 85%;
             width: 85%;
         }
+
         p {
             font-weight: 900;
             font-size: 20px;
@@ -435,6 +450,7 @@
     .img3 {
         margin-top: 25px;
     }
+
     .img4 {
         margin-top: 25px;
     }
