--- a/CSS/style.css
+++ b/CSS/style.css
@@ -100,7 +100,7 @@
   color: gold;
   align-items: center;
   padding: 15px;
-  margin-bottom: 65px;
+  margin-bottom: 10%;
   font-size: 90px;
   text-decoration: none;
 }
@@ -205,6 +205,7 @@
 }
 .abimg1 img {
   border-radius: 15px;
+  box-shadow: 10px 10px 10px 0;
 }
 .abimg1 h1 {
   padding-left: 130px;
@@ -228,6 +229,7 @@
 }
 .abimg2 img {
   border-radius: 15px;
+  box-shadow: 10px 10px 10px 0;
 }
 .abimg2 h1 {
   padding-left: 130px;
@@ -250,6 +252,7 @@
 }
 .abimg3 img {
   border-radius: 15px;
+  box-shadow: 10px 10px 10px 0;
 }
 .abimg3 h1 {
   padding-left: 130px;
@@ -272,6 +275,7 @@
 }
 .abimg4 img {
   border-radius: 15px;
+  box-shadow: 10px 10px 10px 0;
 }
 .abimg4 h1 {
   padding-left: 130px;
@@ -294,6 +298,7 @@
 }
 .abimg5 img {
   border-radius: 15px;
+  box-shadow: 10px 10px 10px 0;
 }
 .abimg5 h1 {
   padding-left: 130px;
@@ -310,6 +315,68 @@
   padding: 20px;
   margin: 0;
   font-family: "Ysabeau", sans-serif;
+}
+.main-hist .hist1 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.main-hist .hist1 h1 {
+  font-family: "Pacifico", cursive;
+}
+.main-hist .hist2 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.main-hist .hist2 h1 {
+  font-family: "Pacifico", cursive;
+}
+.main-hist .hist3 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.main-hist .hist3 h1 {
+  font-family: "Pacifico", cursive;
+}
+.main-hist .hist4 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.main-hist .hist4 h1 {
+  font-family: "Pacifico", cursive;
+}
+.main-hist .hist4 .hist4img {
+  display: flex;
+  justify-content: space-evenly;
+}
+.main-hist .hist4 .hist4img img {
+  height: 400px;
+  width: 450px;
+  margin: 20px;
+  border-radius: 15px;
+  box-shadow: 10px 10px 10px 0px;
+}
+.main-hist .hist4 .hist4img img:hover {
+  transition: 0.8s;
+  transform: scale(0.9);
+}
+.main-hist .hist4 .hist4img .singles {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.main-hist .hist4 .hist4img .singles li {
+  font-size: 22px;
 }
 
 /* MAIN DISCOGRAFIA BEGINNING */
@@ -492,6 +559,12 @@
 @media (min-width: 800px) {
   .navbar-nav {
     padding: 15px;
+  }
+}
+@media (max-width: 800px) {
+  .hist4img {
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media screen and (min-width: 699px) {
