--- a/SCSS/layout/_index.scss
+++ b/SCSS/layout/_index.scss
@@ -22,7 +22,7 @@
         color: gold;
         align-items: center;
         padding: 15px;
-        margin-bottom: 65px;
+        margin-bottom: 10%;
         font-size: 90px;
         text-decoration: none;
 
@@ -152,6 +152,7 @@
 
     img {
         border-radius: 15px;
+        box-shadow: 10px 10px 10px 0;
     }
 
     h1 {
@@ -179,6 +180,7 @@
 
     img {
         border-radius: 15px;
+        box-shadow: 10px 10px 10px 0;
     }
 
 
@@ -205,6 +207,7 @@
 
     img {
         border-radius: 15px;
+        box-shadow: 10px 10px 10px 0;
     }
 
     h1 {
@@ -231,6 +234,7 @@
 
     img {
         border-radius: 15px;
+        box-shadow: 10px 10px 10px 0;
     }
 
     h1 {
@@ -257,6 +261,7 @@
 
     img {
         border-radius: 15px;
+        box-shadow: 10px 10px 10px 0;
     }
 
     h1 {
@@ -281,8 +286,77 @@
     padding: 20px;
     margin: 0;
     font-family: 'Ysabeau', sans-serif;
+    .hist1 {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 20px;
+        text-align: center;
 
+        h1 {
+            font-family: 'Pacifico', cursive;
+        }
+    }
+    .hist2 {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+
+        h1 {
+            font-family: 'Pacifico', cursive;
+        }
+    }
+    .hist3 {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+
+        h1 {
+            font-family: 'Pacifico', cursive;
+        }
+    }
+    .hist4 {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 20px;
+        h1 {
+            font-family: 'Pacifico', cursive;
+        }
+        .hist4img {
+            display: flex;
+            justify-content: space-evenly;
+            img {
+                height: 400px;
+                width: 450px;
+                margin: 20px;
+                border-radius: 15px;
+                box-shadow: 10px 10px 10px 0px;
+                &:hover  {
+                    transition: 0.8s;
+                    transform: scale(0.9);
+
+                }
+            }
+            .singles {
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+                li {
+                    font-size: 22px;
+                }
+            }
+        }
+    }
 }
+
+
+
+// FINISH MAIN HISTORY
 
 /* MAIN DISCOGRAFIA BEGINNING */
 
