--- a/SCSS/layout/_index.scss
+++ b/SCSS/layout/_index.scss
@@ -332,7 +332,7 @@
             justify-content: space-evenly;
             img {
                 height: 400px;
-                width: 450px;
+                width: 400px;
                 margin: 20px;
                 border-radius: 15px;
                 box-shadow: 10px 10px 10px 0px;
@@ -345,6 +345,7 @@
             .singles {
                 display: flex;
                 flex-direction: column;
+                align-items: center;
                 gap: 30px;
                 li {
                     font-size: 22px;
@@ -430,7 +431,7 @@
     border: 2px solid black;
     border-radius: 15px;
     background-color: rgb(215, 66, 66);
-    color: white;
+    color: rgb(243, 238, 238);
 
     .spot3-div {
         h1 {
@@ -448,7 +449,7 @@
     border: 2px solid black;
     border-radius: 15px;
     background-color: rgb(0, 0, 0);
-    color: white;
+    color: rgb(199, 195, 195);
 
     .spot4-div {
         h1 {
